change background of the home page to match the other pages

--- a/index.html
+++ b/index.html
@@ -54,74 +54,76 @@
         divine.
       </p>
     </div>
+    <section class="content-chandra">
+      <div class="haliya">
+        <h3>Haliya: Filipino goddess of the Moon</h3>
+        <section id="flexbox">
+          <p>
+            Haliya is the moon's armored guardian: a warrior goddess who masks
+            her radiant beauty with gold, wields a crescent blade, and defends
+            the sky against Bakunawa—the sea-serpent that tries to swallow the
+            moon during eclipses. Each time the dragon rises, Haliya meets it in
+            fierce combat and through her vigilance and courage, the last moon's
+            light endures.
+          </p>
 
-    <div class="haliya">
-      <h3>Haliya: Filipino goddess of the Moon</h3>
-      <section id="flexbox">
-        <p>
-          Haliya is the moon's armored guardian: a warrior goddess who masks her
-          radiant beauty with gold, wields a crescent blade, and defends the sky
-          against Bakunawa—the sea-serpent that tries to swallow the moon during
-          eclipses. Each time the dragon rises, Haliya meets it in fierce combat
-          and through her vigilance and courage, the last moon's light endures.
-        </p>
+          <img src="images/haliyagoddess.jpg" alt="Haliya" />
+        </section>
+      </div>
 
-        <img src="images/haliyagoddess.jpg" alt="Haliya" />
-      </section>
-    </div>
+      <div class="chandra">
+        <h3>Chandra: Hindu god of the Moon</h3>
+        <section id="flexbox2">
+          <p>
+            Chandra is the Hindu god of the moon, often depicted as a beautiful,
+            fair, and wise deity who rides a chariot pulled by white horses. He
+            is associated with the mind, emotions, and fertility, and plays an
+            important role in both mythology and astrology. Chandra is also one
+            of the Navagrahas (nine planetary deities) and is linked to the
+            lunar calendar in Hindu tradition. He is said to be the father of
+            Budha (the planet Mercury) and is married to the 27 Nakshatras
+            (lunar mansions), who are daughters of the sage Daksha.
+          </p>
 
-    <div class="chandra">
-      <h3>Chandra: Hindu god of the Moon</h3>
-      <section id="flexbox2">
-        <p>
-          Chandra is the Hindu god of the moon, often depicted as a beautiful,
-          fair, and wise deity who rides a chariot pulled by white horses. He is
-          associated with the mind, emotions, and fertility, and plays an
-          important role in both mythology and astrology. Chandra is also one of
-          the Navagrahas (nine planetary deities) and is linked to the lunar
-          calendar in Hindu tradition. He is said to be the father of Budha (the
-          planet Mercury) and is married to the 27 Nakshatras (lunar mansions),
-          who are daughters of the sage Daksha.
-        </p>
+          <img src="images/chandragoddess.jpg" alt="Chandra" />
+        </section>
+      </div>
 
-        <img src="images/chandragoddess.jpg" alt="Chandra" />
-      </section>
-    </div>
+      <div class="kuutar">
+        <h3>Kuutar: Finnish goddess of the Moon</h3>
+        <section id="flexbox3">
+          <p>
+            Kuutar is the Finnish goddess of the moon in Finnish mythology and
+            folklore. She is known for her beauty and grace, and she weaves
+            golden threads and clothes from moonlight. Kuutar is associated with
+            femininity, wealth, and the mystical qualities of the moon. In the
+            Kalevala, Finland's national epic, maidens pray to her for beauty
+            and fine garments. She represents the nurturing and magical aspects
+            of the moon. This image depicts her with sun goddess Paivatar and
+            star goddess Tahdetar.
+          </p>
 
-    <div class="kuutar">
-      <h3>Kuutar: Finnish goddess of the Moon</h3>
-      <section id="flexbox3">
-        <p>
-          Kuutar is the Finnish goddess of the moon in Finnish mythology and
-          folklore. She is known for her beauty and grace, and she weaves golden
-          threads and clothes from moonlight. Kuutar is associated with
-          femininity, wealth, and the mystical qualities of the moon. In the
-          Kalevala, Finland's national epic, maidens pray to her for beauty and
-          fine garments. She represents the nurturing and magical aspects of the
-          moon. This image depicts her with sun goddess Paivatar and star
-          goddess Tahdetar.
-        </p>
+          <img src="images/kuutar.png" alt="Kuutar" />
+        </section>
+      </div>
 
-        <img src="images/kuutar.png" alt="Kuutar" />
-      </section>
-    </div>
+      <div class="khonshu">
+        <h3>Khonshu: Egyptian god of the Moon</h3>
+        <section id="flexbox4">
+          <p>
+            Khonshu is the ancient Egyptian god of the moon, time, and healing.
+            Often depicted as a young man with a sidelock of youth and a moon
+            disk above his head, he was believed to control the night and mark
+            the passage of time. Khonshu was also associated with protection and
+            had healing powers. He was worshipped as the son of Amun and Mut in
+            the Theban triad and played an important role in lunar and
+            calendar-related rituals. His name means “traveler,” reflecting the
+            moon's journey across the sky.
+          </p>
 
-    <div class="khonshu">
-      <h3>Khonshu: Egyptian god of the Moon</h3>
-      <section id="flexbox4">
-        <p>
-          Khonshu is the ancient Egyptian god of the moon, time, and healing.
-          Often depicted as a young man with a sidelock of youth and a moon disk
-          above his head, he was believed to control the night and mark the
-          passage of time. Khonshu was also associated with protection and had
-          healing powers. He was worshipped as the son of Amun and Mut in the
-          Theban triad and played an important role in lunar and
-          calendar-related rituals. His name means “traveler,” reflecting the
-          moon's journey across the sky.
-        </p>
-
-        <img src="images/Khonsu.jpg" alt="Khonshu" />
-      </section>
-    </div>
+          <img src="images/Khonsu.jpg" alt="Khonshu" />
+        </section>
+      </div>
+    </section>
   </body>
 </html>
